username working, ues a user email to a username, will styling

--- a/public/chat.html
+++ b/public/chat.html
@@ -53,7 +53,7 @@
         <script id="loc-msg-tem" type="text/html">
         <div id="user">
                 <span id="name">{{email}}</span>
-                <!-- <span id="time">{{createdAt}}</span> -->
+                <span id="time">{{createdAt}}</span>
                 <span id="local"><a href="{{url}}" target="_blank">My current location</a></span>
         </div>
         </script>
