--- a/public/members.html
+++ b/public/members.html
@@ -149,7 +149,7 @@
                               </ul>
                             </div>
                           </div>
-                          <button type="submit" class="btn btn-success">Submit</button>
+                          <button class="btn btn-success" id="location-submit">Submit</button>
                       </form>
 
                     </div>
