--- a/public/members.html
+++ b/public/members.html
@@ -31,7 +31,7 @@
           <a id="logo" class="navbar-brand" href="#">Vændio</a>
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Logout</a>
+              <a class="nav-link" href="/api/logout">Logout</a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="chat.html">Live Chat</a>
@@ -77,7 +77,7 @@
                       <input type="number" min="0" max="5000" step="1" id="stock">
                     </div>
                     <div class="form-group">
-                      <input type="submit" class="btn btn-primary" value="submit" id="inv-submit">
+                      <button class="btn btn-success" id="inv-submit">Submit</button>
 
                     </div>
                   </form>
