--- a/public/members.html
+++ b/public/members.html
@@ -76,7 +76,7 @@
                       <input type="number" min="0" max="5000" step="1" id="stock">
                     </div>
                     <div class="form-group">
-                      <button class="btn btn-success" id="inv-submit">Submit</button>
+                      <input type="submit" class="btn btn-success" placeholder="Submit" id="inv-submit">
 
                     </div>
                   </form>
@@ -148,18 +148,7 @@
                               </ul>
                             </div>
                           </div>
-
-                          <div class="form-group col-md">
-                            <label for="payment">Accepted Payments</label>
-                            <input type="text" class="form-control" id="payment">
-                          </div>
-                          <div class="form-group col-md">
-                            <label for="time">Operating Hours</label>
-                            <input type="text" class="form-control" id="time">
-                          </div>
-
-
-                          <button class="btn btn-success" id="location-submit">Submit</button>
+                          <button type="submit" class="btn btn-success" id="location-submit">Submit</button>
                       </form>
 
                     </div>
