added price input

--- a/public/members.html
+++ b/public/members.html
@@ -77,8 +77,10 @@
                       <input type="text" class="form-control" id="product" placeholder="item name">
                     </div>
                     <div class="form-group">
-                      <label for="formControlSelect1">Number in stock</label>
+                      <label for="stock">Number in stock</label>
                       <input type="number" min="0" max="5000" step="1" id="stock">
+                      <label for="price">Price of product</label>
+                      <input type="number" min=".01" max="5000.99" step=".01" id="price">
                     </div>
                     <div class="form-group">
                       <input type="submit" class="btn btn-success" placeholder="Submit" id="inv-submit">
@@ -161,15 +163,9 @@
                               <input type="text" class="form-control" id="time">
                             </div>
                           </div>
-<<<<<<< HEAD
                           </div>
                             <button class="btn btn-success" id="location-submit">Submit</button>
                         </form>
-=======
-                          <button type="submit" class="btn btn-success" id="location-submit">Submit</button>
-                      </form>
-
->>>>>>> 4a6ff946e017842ad2fc10eda4eec2f54a8ce371
                     </div>
 
                     <div class="tab-pane fade" id="nav-updateStr" role="tabpanel"
