--- a/public/members.html
+++ b/public/members.html
@@ -30,7 +30,7 @@
           <a id="logo" class="navbar-brand" href="#">Vændio</a>
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="/api/logout">Logout</a>
+              <a class="nav-link" href="/logout">Logout</a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="chat.html">Live Chat</a>
