inventory inside overlay

--- a/public/map.html
+++ b/public/map.html
@@ -54,22 +54,7 @@
             <th>Price</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td>1</td>
-            <td>Onions</td>
-            <td>$3</td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>Carrots</td>
-            <td>$3</td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>Potatoes</td>
-            <td>$3</td>
-          </tr>
+        <tbody id="tbody">
         </tbody>
       </Table>
     </div>
