--- a/public/members.html
+++ b/public/members.html
@@ -176,41 +176,16 @@
   <div id="overlay">
     <div id="container" class="overlayBody">
       <button type="button" id="closeOverlay" onclick="closeOverlay()" class="btn btn-danger">x</button>
-      <h1>Bobby's Store - 1234 Main St.</h1>
+      <h1>Bobby's Store - 1234 Main St</h1>
       <Table class="table" striped bordered hover size="sm">
         <thead>
           <tr>
             <th>#</th>
             <th>Item</th>
             <th>Price</th>
-            <th></th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td>1</td>
-            <td>Onions</td>
-            <td>$3/onion</td>
-            <td>
-              <button type="button" class="btn btn-success">Add to order</button>
-            </td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>Carrots</td>
-            <td>$3/carrot</td>
-            <td>
-              <button type="button" class="btn btn-success">Add to order</button>
-            </td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>Potatoes</td>
-            <td>$3/potatoes</td>
-            <td>
-              <button type="button" class="btn btn-success">Add to order</button>
-            </td>
-          </tr>
+        <tbody id="tbody">
         </tbody>
       </Table>
     </div>
