store titles frontend

--- a/public/members.html
+++ b/public/members.html
@@ -193,7 +193,7 @@
       <div id="overlay">
     <div id="container" class="overlayBody">
       <button type="button" id="closeOverlay" onclick="closeOverlay()" class="btn btn-danger">x</button>
-      <h1>Bobby's Store - 1234 Main St</h1>
+      <h1 id="storeTitle"></h1>
       <Table class="table" striped bordered hover size="sm">
         <thead>
           <tr>
