--- a/public/members.html
+++ b/public/members.html
@@ -131,6 +131,10 @@
                       aria-labelledby="nav-home-tab">
                       <form>
                         <div class="form-group">
+                          <label for="inputAddress">Name</label>
+                          <input type="text" class="form-control" id="name" placeholder="1234 Main St">
+                        </div>
+                        <div class="form-group">
                           <label for="inputAddress">Address</label>
                           <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
                         </div>
